# ASCII_ART

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/: __init__.py  ascii_converter.py  character_sets.py  color_handler.py  gui.py  image_processor.py  main.py  utils.py
tests/: __init__.py  test_ascii_converter.py  test_image_processor.py
